--- a/client/src/Pages/User Dashboard/components/finddoctorprofile.module.css
+++ b/client/src/Pages/User Dashboard/components/finddoctorprofile.module.css
@@ -1,5 +1,5 @@
 .profileBody {
-   margin-top: 1rem;
+   /* margin-top: 1rem; */
    background-color: var(--gray);
    width: 100%;
    height: 90%;
