--- a/client/src/Pages/User Dashboard/components/medicationForm.module.css
+++ b/client/src/Pages/User Dashboard/components/medicationForm.module.css
@@ -44,9 +44,8 @@
 }
 .formBoxInputs {
    margin: 0.3rem 0;
-
    width: 100%;
-   height: 2rem;
+   height: 2.5rem;
    border-radius: 5px;
    display: flex;
    align-items: center;
@@ -143,7 +142,7 @@
    display: none;
 }
 
-@media (min-width: 2001px) {
+@media (min-width: 2000px) {
    .formTitle {
       height: 70px;
    }
@@ -151,6 +150,7 @@
       font-size: 20px;
    }
    .formBox label {
+      display: inline-block;
       font-size: 18px;
    }
    .formBox .formBoxInputs input {
